@@ -1,5 +1,6 @@
 Version next
 * Fix gripper styling on OS X (Australis)
+* Fix Windows download button attention icon (Australis).
 * Updated translations for: bg-BG, da, de, dsb, el, eo, es-ES, fr, he, hsb, ja-JP, nb-NO, nl, pl, ro, sr, sv-SE, tr, zh-CN, zh-TW
 
 Version 2014.06.01.03b
